name:                docset
version:             0.0.1.0
synopsis:            Read Dash and ZDash docsets in Haskell.
description:         A simple library to read and write Dash docsets.
                     ZDash docsets are supported in read-only mode.
                     See http://kapeli.com/docsets for details.
homepage:            https://github.com/roman-kashitsyn/docset-hs
license:             BSD3
license-file:        LICENSE
author:              Roman Kashitsyn
maintainer:          roman.kashitsyn@gmail.com
copyright:           (c) 2014 Roman Kashitsyn
category:            Documentation
build-type:          Simple
cabal-version:       >=1.8

library    
  build-depends:       base ==4.6.*,
                       HDBC >=2.3,
                       HDBC-sqlite3 ==2.3.*,
                       text,
                       containers,
                       hxt,
                       filepath >=1.3,
                       plist >=0.0.3

  ghc-options:         -Wall -fwarn-tabs
  default-language:    Haskell98

  exposed-modules:
    Documentation.Docset

  other-modules:   
   Documentation.Docset.Info
   Documentation.Docset.Layout
   Documentation.Docset.EntryType


